<resources>
    <string name="app_name">MagicRentals</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">215087245538598</string>

    <string-array name="proptypelist">
        <item>Single-Family Home</item>
        <item>Patio Home</item>
        <item>Villa</item>
        <item>Cottage</item>
        <item>Courtyard Home</item>
        <item>Duplex,Triplex</item>
        <item>Townhome</item>
        <item>Apartment Flat</item>
    </string-array>

    <string-array name="pricerangelist">
        <item>$1000-$3000</item>
        <item>$3000-$6000</item>
        <item>$6000-$10000</item>
        <item>$10000-$20000</item>
        <item>$20000-$40000</item>
        <item>$40000-$90000</item>
        <item>above $90000</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>


    <string name="input_name">Nick Name</string>
    <string name="town_house">Town House</string>
    <string name="condo">Condo</string>
    <string name="apartment">Apartment</string>
    <string name="villa">Villa</string>
    <string name="submit">Submit</string>
    <string name="propertytype">Property Type</string>
    <string name="basicinfo">Basic Info</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="state">State</string>
    <string name="propertydetails">Prperty Details</string>
    <string name="roomscount">Bedrooms</string>
    <string name="bathroomcount">Bathroom</string>
    <string name="area">Area</string>
    <string name="sqft">Square Ft.</string>
    <string name="description">Descrciption</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="rent">Rent</string>
    <string name="curr">USD</string>
    <string name="zipcode">Zipcode</string>
    <string name="street">Street</string>
    <string name="contactinfo">Contact Info</string>
    <string name="add_property">Create</string>
    <string name="editproperty">Edit</string>
    <string name="deleteproperty">Delete</string>
    <string name="cancelproperty">Cancel</string>
    <string-array name="property_type">
        <item>Apartment</item>
        <item>Condo</item>
        <item>Villa</item>
        <item>Town House</item>
        <item>Penthouse</item>
    </string-array>
    <string-array name="rooms">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10+</item>
    </string-array>

    <string-array name="states">

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_properties_landlord">ListPropertiesLandlord</string>
</resources>
